--- a/app/src/main/res/layout/activity_palindrome.xml
+++ b/app/src/main/res/layout/activity_palindrome.xml
@@ -28,6 +28,12 @@
         android:layout_height="wrap_content"/>
 
 
-
+    <android.support.design.widget.FloatingActionButton   xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/myFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:background="@android:color/white"
+        />
 
 </LinearLayout>
