--- a/app/src/main/res/layout/activity_brackets.xml
+++ b/app/src/main/res/layout/activity_brackets.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_brackets"
     android:layout_width="match_parent"
@@ -8,6 +8,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:background="#E1E1E1"
     tools:context="com.alexw.spike.BracketsActivity">
 
-</RelativeLayout>
+
+    <EditText
+        android:id="@+id/edit_text_brackets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/rounded_edittext"
+        android:layout_marginBottom="80px"/>
+
+
+    <TextView
+        android:id="@+id/text_brackets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+
+</LinearLayout>
