--- a/app/src/main/res/layout/activity_brackets.xml
+++ b/app/src/main/res/layout/activity_brackets.xml
@@ -22,11 +22,12 @@
         android:layout_marginBottom="80px"/>
 
 
-    <TextView
-        android:id="@+id/text_brackets"
+    <android.support.design.widget.FloatingActionButton   xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/myFAB"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:background="@android:color/white"
+        />
 
 </LinearLayout>
